Fix sidebar spacing on mobile

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -58,6 +58,10 @@ h1.govuk-heading {
 
 .sidebar {
   margin-top: 60px;
+  @media (max-width: 640px) {
+    margin-top: 0px;
+    padding: 0;
+  }
 }
 
 .sidebar > ul {
